--- a/home.html
+++ b/home.html
@@ -52,7 +52,7 @@
 
   <!-- Camera Functionality (Optional) -->
   <div class="map-container">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4137.161390466067!2d77.4374613867193!3d28.596116916377106!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cef44bc40c515%3A0x3368561b0b0fe644!2sJIMS%20Noida%20Extension%20College!5e0!3m2!1sen!2sin!4v1745491730011!5m2!1sen!2sin"
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3499.648085753736!2d77.4393574749593!3d28.700171881006764!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cf10e0c2a7745%3A0xaaa871ac3acc613b!2sRaj%20Kumar%20Goel%20Institute%20Of%20Technology!5e0!3m2!1sen!2sin!4v1747756337975!5m2!1sen!2sin"
             width="600" height="450" style="border: 0" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
